# kelpmark

./: .editorconfig  .gitignore  README.md  kelpmark.py  mainwindow.ui  pyproject.toml  qwater.py  requirements.txt  setup.cfg  setup.py
kelpmark/: __init__.py  mainwindow.ui
