[metadata]
name = KelpMark
version =

description = Watermark images or PDF
long_description =

url = https://gitlab.com/hydrargyrum/kelpmark

license =
author = Hg
author_email = dev@indigo.re

classifier =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: Public Domain
	Topic :: Desktop Environment
	Topic :: Multimedia :: Graphics
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Utilities
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

keywords = watermark, pdf, image, document, kyc

[options]
packages = find:
zip_safe = 1

[options.entry_points]
gui_scripts =
    kelpmark=kelpmark:main

[bdist_wheel]
universal = 1
